--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.27.1",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -32,13 +34,16 @@
     "eslint-config-next": "14.0.2",
     "framer-motion": "^10.18.0",
     "intl-messageformat": "^10.5.0",
-    "next": "14.0.2",
+    "next": "^14.1.0",
+    "next-sanity": "^7.0.17",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "resend": "^3.1.0",
     "rss": "^1.2.2",
+    "sanity": "^3.27.1",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
