Update animated logo

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@
 
 NEXT_PUBLIC_SANITY_PROJECT_ID="e6bobmmh"
 NEXT_PUBLIC_SANITY_DATASET="production"
+
+RESEND_API_KEY="re_EpK8k7Dx_Evv2pamt9ntARVebZtgzy1ak"
