--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
+    "@react-email/components": "^0.0.14",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.27.1",
     "@types/node": "20.5.7",
@@ -40,6 +41,8 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "^2.0.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "resend": "^3.1.0",
     "rss": "^1.2.2",
     "sanity": "^3.27.1",
