--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "14.0.2",
     "framer-motion": "^10.18.0",
     "intl-messageformat": "^10.5.0",
+    "jotai": "^2.6.4",
     "next": "^14.1.0",
     "next-sanity": "^7.0.17",
     "next-themes": "^0.2.1",
