--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jotai": "^2.6.4",
     "next": "^14.1.0",
     "next-sanity": "^7.0.17",
+    "next-share": "^0.27.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
