--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-date-picker": "^10.6.0",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "18.2.0",
     "react-email": "^2.0.0",
-    "react-tailwindcss-datepicker": "^1.6.6",
     "resend": "^3.1.0",
     "rss": "^1.2.2",
     "sanity": "^3.27.1",
