--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^10.18.0",
     "intl-messageformat": "^10.5.0",
     "jotai": "^2.6.4",
+    "motion": "^10.17.0",
     "next": "^14.1.0",
     "next-sanity": "^7.0.17",
     "next-share": "^0.27.0",
@@ -50,7 +51,6 @@
     "rss": "^1.2.2",
     "sanity": "^3.27.1",
     "styled-components": "^6.1.8",
-    "swiper": "^11.0.5",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
